product boxes for new products, clean up swipers across the site, fix horizontal scrolling elements across site

--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -509,12 +509,6 @@ img {
     max-width: 100%;
 }
 
-.product-box-outer {
-    overflow: visible !important;
-    overflow: var(--swiper-overflow, visible) !important;
-    touch-action: pan-y
-}
-
 .css-wvKZk {
     max-width: var(--max-site-width);
     margin: 0 auto;
@@ -940,25 +934,12 @@ img {
     background-color: var(--theme-link-color);
 }
 
-
 .css-TXZf4 {
     display: var(--linkContainer-flex);
     flex-wrap: var(--linkContainer-wrap);
     justify-content: var(--linkContainer-justify);
     padding-top: var(--linkContainer-padding-top);
     width: var(--linkContainer-width)
-}
-
-.css-JEZym {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0
-}
-
-.css-JEZym {
-    pointer-events: none;
-    top: var(--intersection-offset)
 }
 
 .css-2ieoz {
@@ -1038,6 +1019,7 @@ img {
     display: var(--wrap-display);
     position: relative;
     padding: var(--wrap-padding);
+    transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
 }
 
 .css-2dGqW:focus,
@@ -1436,52 +1418,36 @@ img {
     margin: 1em auto 0;
 }
 
-.product-scroll-box {
-    position: relative;
-    margin: 48px 0
-}
-
-.product-scroll-box {
-    z-index: 3
-}
-
 .product-box {
-    margin: 0 10px;
+    margin-right: 1.5em;
+    height: auto;
     display: flex;
-    max-width: 350px;
+    max-width: 300px;
     position: relative;
     text-align: center;
-    justify-content: flex-end;
     align-items: center;
     flex-direction: column;
 }
 
-.featured {
-    color: var(--theme-accent-color);
-    color: var(--feature-lable-color, var(--theme-accent-color));
-    font-size: 14px
-}
-
-.featured {
-    font-style: normal;
-    font-weight: 700;
-    line-height: 28px;
-    letter-spacing: 6px;
-    text-transform: uppercase;
-    text-align: center
+@media(max-width:768px) {
+    .product-box {
+        max-width: min(70vw, 300px);
+    }
 }
 
 .product-box img {
     width: 100%;
     height: auto;
     object-fit: contain;
+    max-height: 300px;
+    border-radius: 1em;
 }
 
 .product-box hr {
     display: block;
     height: 3px;
     border: 0;
-    border-top: 3px solid;
+    border-top: 2px solid;
     margin: 1em auto;
     padding: 0;
     max-width: 60%;
@@ -1500,13 +1466,15 @@ img {
 .product-desc {
     line-height: 1.5em;
     margin: 0 0 1em;
+    padding: 0 1em;
     width: 100%;
-    text-align: inherit
+    text-align: inherit;
+    font-size: 0.85em;
 }
 
 .css-cW5DV {
-    margin: auto auto auto;
-    padding-top: 1em
+    margin: auto auto 0;
+    padding-top: 0.5em
 }
 
 @media(min-width:768px) {
@@ -1532,43 +1500,6 @@ img {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-}
-
-.css-3c0LG {
-    text-align: center;
-    margin: 2em auto 0;
-    padding: 0 1.75em;
-    padding: 0 var(--container-padding-x, 1.75rem);
-    max-width: calc(var(--container-max-width)+ 3.5rem);
-    max-width: calc(var(--container-max-width)+ var(--container-padding-x, 1.75rem)+ var(--container-padding-x, 1.75rem))
-}
-
-@media(max-width:768px) {
-    .card-scroll-box {
-        padding-bottom: 1em;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        max-width: 100%;
-    }
-
-    .product-box {
-        max-width: min(90vw, 400px);
-    }
-
-    .card-scroll-box::-webkit-scrollbar {
-        width: 0em;
-
-    }
-
-    .card-scroll-box::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        max-width: 100%;
-
-    }
-
-    .card-scroll-box::-webkit-scrollbar-thumb {
-        background-color: #000000;
-    }
 }
 
 .css-nd7IL {
@@ -1652,9 +1583,9 @@ html[lang=zh-Hant] .css-lV1Vi {
     border: 3px solid var(--button-border-color);
 }
 
-.buy-product-button:active {
-    color: var(--theme-accent-color);
-    transform: translateY(1px)
+.buy-product-button-disabled:focus,
+.buy-product-button-disabled:hover {
+    color: var(--theme-button-color);
 }
 
 .icon-mail {
@@ -1670,12 +1601,10 @@ html[lang=zh-Hant] .css-lV1Vi {
 }
 
 .css-XorOV {
-    --cards-padding: 1.5rem;
+    --cards-padding: 1em;
     --card-flip-padding: 60px;
     --card-padding: var(--card-flip-padding) 0 18px;
-    overflow: hidden;
-    z-index: 0;
-    position: relative;
+    --container-flex-direction: column-reverse;
 }
 
 .css-fTdGr {
@@ -1694,16 +1623,35 @@ html[lang=zh-Hant] .css-lV1Vi {
     overflow-y: hidden;
 }
 
+.card-scroll-box::after { /* add margin to the right at the end of the flex, without messing up scrollbar */
+    content: '';
+    width: 1em;
+    flex-shrink: 0
+}
+
 .card-scroll-box::-webkit-scrollbar {
     width: 1em;
+    height: 0.5em;
 }
 
 .card-scroll-box::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 0.25em var(--black-alpha75);
+    border-radius: 0.25em;
 }
 
 .card-scroll-box::-webkit-scrollbar-thumb {
-    background-color: #000000;
+    background-color: var(--black-alpha75);
+    border-radius: 0.25em;
+}
+
+.card-scroll-box::-webkit-scrollbar-button:start {
+    background: rgba(0, 0, 0, 0);
+    width: 0.5em;
+}
+
+.card-scroll-box::-webkit-scrollbar-button:end {
+    background: rgba(0, 0, 0, 0);
+    width: 1.5em;
 }
 
 .css-tg8OC {
@@ -2361,29 +2309,6 @@ html[lang=zh-Hant] .css-4zJQw {
     transform: rotateY(180deg)
 }
 
-.product-box-outer {
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    overflow: hidden;
-    list-style: none;
-    padding: 0;
-    z-index: 1
-}
-
-.product-box-wrapper {
-    position: relative;
-    width: 100%;
-    z-index: 1;
-    display: flex;
-    transition-property: transform;
-    box-sizing: content-box;
-    justify-content: space-evenly;
-    align-items: flex-end;
-    flex-direction: row;
-    align-content: stretch;
-}
-
 .swiper {
     touch-action: pan-x pan-y;
     margin-left: auto;
@@ -2401,10 +2326,7 @@ html[lang=zh-Hant] .css-4zJQw {
     z-index: 1;
     display: flex;
     transition-property: transform;
-    box-sizing: content-box;
-    justify-content: flex-start;
-    align-items: flex-end;
-    flex-direction: row;
+    box-sizing: content-box; 
     transform: translateZ(0)
 }
 
@@ -2443,6 +2365,7 @@ html[lang=zh-Hant] .css-4zJQw {
 .swiper-slide {
     flex-shrink: 0;
     width: 100%;
+    height: auto;
     position: relative;
     transition-property: transform
 }
@@ -2570,7 +2493,7 @@ html[lang=zh-Hant] .css-4zJQw {
     padding: 0.3em 0 0;
     width: 100%;
     padding-left: 0;
-    transition: background-color 0.25s;
+    transition: background-color 0.2s;
     background: transparent;
 }
 
@@ -2626,7 +2549,7 @@ input[type=submit],
     background-color: var(--theme-primary-color--210);
     color: var(--white);
     box-shadow: 0 0 10px 0px var(--black-alpha75);
-    transition: background-color 0.25s, color 0.25s, box-shadow 0.25s;
+    transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
 }
 
 button:hover,
